v0.6.8    Fri, 25 Mar 2016 18:25:27 +0900
  - 의류준비에서 여성의 경우 스커트둘레 대신 허리를 표시 (#106)

v0.6.7    Thu, 03 Mar 2016 15:56:19 +0900
  - 온라인 현황에 사용자의 신체치수를 나타냄 (#97)
  - 의류준비에서 온라인대여자는 나타내지 않음
  - 최소 바지길이 변경 90 -> 80 (#95)
  - 의류기록에서의 bestfit 을 강조 (#90)
  - 수선목록과 포장목록에 제목표시 (#96)

v0.6.6    Mon, 29 Feb 2016 19:22:12 +0900
  - 의류준비에서 여성의 경우 허리대신에 스커트둘레를 표시

v0.6.5    Mon, 29 Feb 2016 12:25:39 +0900
  - hook 을 추가해서 worker 별 brain 의 동시성 문제해결

v0.6.4    Fri, 26 Feb 2016 16:58:02 +0900
  - Use in-memory brain rather than local brain

v0.6.3    Fri, 26 Feb 2016 16:19:05 +0900
  - Save brain data explicitly for refresh room 
  - Brain 을 file 대신에 redis 에 저장

v0.6.2    Fri, 26 Feb 2016 12:03:54 +0900
  - 의류준비에서 상태가 변경되어도 정리가 필요한 탈의실 번호를 추적

v0.6.1    Thu, 25 Feb 2016 18:23:33 +0900
  - active 상태표시를 위한 API 변경
    + POST   /active?key=:key
    + DELETE /active/:order_id?key=:key
    - POST   /room
    - DELETE /room/:order_id
    - POST   /select
    - DELETE /select/:order_id
  - improve OpenCloset::Monitor::Plugin::Helpers doc
  - helper previous_order supports @status_in option
  - 의류준비중인 사용자 이름을 탈의실에 나타냄
  - 정리가 필요한 방의 표시 제거
  - 탈의실의 이전 사용자가 잘못 나타나는 버그 수정

v0.6.0    Wed, 24 Feb 2016 18:31:47 +0900
  - 좀 더 편리한 우클릭 메뉴의 제안
  - 정리가 필요한 탈의실에 아이콘을 보여줌

v0.5.8    Fri, 05 Feb 2016 12:08:46 +0900
  - Allow cors to get target date

v0.5.7    Fri, 05 Feb 2016 11:22:11 +0900
  - opencloset.css 적용
  - Rename OpenCloset::Plugin::Helpers OpenCloset::Monitor::Plugin::Helpers
  - Add route 'GET /target_date.json'

v0.5.6    Thu, 28 Jan 2016 15:28:44 +0900
  - 일요일/공휴일에 대한 반납 문구 삭제

v0.5.5    Thu, 28 Jan 2016 15:03:04 +0900
  - 수선의 대기목록을 의류준비에서도 활용

v0.5.4    Sun, 17 Jan 2016 13:59:22 +0900
  - 포장 -> 포장중으로 라벨 변경

v0.5.3    Wed, 13 Jan 2016 08:35:55 +0900
  - 대여, 반납일에 local timezone 적용
  - opencloset.css bower package 를 사용

v0.5.2    Thu, 17 Dec 2015 16:54:50 +0900
  - font++ @dashboard

v0.5.1    Thu, 17 Dec 2015 10:30:07 +0900
  - 대쉬보드의 반납일을 지정

v0.5.0    Wed, 16 Dec 2015 18:32:38 +0900