@@ -6,7 +6,7 @@ use Net::IP::AddrRanges;
 use OpenCloset::Brain;
 use OpenCloset::Monitor::Schema;
 use OpenCloset::Schema;
-use OpenCloset::Status;
+use OpenCloset::Monitor::Status;
 
 use version; our $VERSION = qv("v0.6.8");
 
@@ -138,7 +138,7 @@ sub _waiting_list {
     ## 각 상태별 주문서의 갯수 를 남녀별로
     ## 22:00 주문서는 온라인 주문서이기 때문에 제외
     my $rs = $self->DB->resultset('Order')->search(
-        { status_id => { -in => [@OpenCloset::Status::ACTIVE_STATUS] }, },
+        { status_id => { -in => [@OpenCloset::Monitor::Status::ACTIVE_STATUS] }, },
         {
             select =>
                 ['status_id', 'user_info.gender', { count => 'status_id' }],
@@ -155,15 +155,15 @@ sub _waiting_list {
         my $cnt       = $row->get_column('cnt');
 
         ## 탈의를 key 한개로 묶는다
-        if (   $status_id >= $OpenCloset::Status::STATUS_FITTING_ROOM1
-            && $status_id <= $OpenCloset::Status::STATUS_FITTING_ROOM11 )
+        if (   $status_id >= $OpenCloset::Monitor::Status::STATUS_FITTING_ROOM1
+            && $status_id <= $OpenCloset::Monitor::Status::STATUS_FITTING_ROOM11 )
         {
-            $waiting{$gender}{$OpenCloset::Status::STATUS_FITTING_ROOM1}
+            $waiting{$gender}{$OpenCloset::Monitor::Status::STATUS_FITTING_ROOM1}
                 += $cnt;
         }
-        elsif ( $status_id == $OpenCloset::Status::STATUS_BOXED ) {
+        elsif ( $status_id == $OpenCloset::Monitor::Status::STATUS_BOXED ) {
             ## 18: 포장, 44: 포장완료 는 같은 상태로 본다
-            $waiting{$gender}{$OpenCloset::Status::STATUS_BOXING} += $cnt;
+            $waiting{$gender}{$OpenCloset::Monitor::Status::STATUS_BOXING} += $cnt;
         }
         else {
             $waiting{$gender}{$status_id} = $cnt;
