@@ -3,7 +3,7 @@ use Mojo::Base 'Mojolicious::Controller';
 
 use Path::Tiny;
 
-use OpenCloset::Status;
+use OpenCloset::Monitor::Status;
 
 has DB => sub { shift->app->DB };
 
@@ -36,7 +36,7 @@ sub elapsed_ymd {
     for my $line ( $tsv->lines( { chomp => 1 } ) ) {
         my ( $gender, $status_id, $value ) = split /\t/, $line;
         push @{ $gdata{daily}{$gender} ||= [] },
-            { label => $OpenCloset::Status::MAP{$status_id}, value => $value };
+            { label => $OpenCloset::Monitor::Status::MAP{$status_id}, value => $value };
         $gdata{daily}{sum}{$gender} += $value;
     }
 
@@ -48,7 +48,7 @@ sub elapsed_ymd {
         {
             push @values,
                 {
-                x => $OpenCloset::Status::REVERSE_ORDER_MAP{ $data->{label} },
+                x => $OpenCloset::Monitor::Status::REVERSE_ORDER_MAP{ $data->{label} },
                 y => $data->{value},
                 };
         }
@@ -70,7 +70,7 @@ sub elapsed_ymd {
         for my $status_id ( sort status_order keys %{ $average->{$gender} } ) {
             push @values,
                 {
-                x => $OpenCloset::Status::ORDER_MAP{$status_id},
+                x => $OpenCloset::Monitor::Status::ORDER_MAP{$status_id},
                 y => $average->{$gender}{$status_id},
                 };
         }
@@ -113,12 +113,12 @@ sub elapsed_ymd {
 ###
 
 sub status_reverse_order {
-    $OpenCloset::Status::REVERSE_ORDER_MAP{ $a->{label} }
-        <=> $OpenCloset::Status::REVERSE_ORDER_MAP{ $b->{label} };
+    $OpenCloset::Monitor::Status::REVERSE_ORDER_MAP{ $a->{label} }
+        <=> $OpenCloset::Monitor::Status::REVERSE_ORDER_MAP{ $b->{label} };
 }
 
 sub status_order {
-    $OpenCloset::Status::ORDER_MAP{$a} <=> $OpenCloset::Status::ORDER_MAP{$b};
+    $OpenCloset::Monitor::Status::ORDER_MAP{$a} <=> $OpenCloset::Monitor::Status::ORDER_MAP{$b};
 }
 
 1;
