@@ -8,7 +8,7 @@
 -   '/assets/dist/js/preparation.min.js'
 - ], csses => ['/assets/components/jQuery-contextMenu/src/jquery.contextMenu.css'];
 - title 'Preparation';
-- use OpenCloset::Status;
+- use OpenCloset::Monitor::Status;
 
 #knock
   %audio{:src => '/assets/audio/knock.ogg'}
@@ -99,7 +99,7 @@
               - my $user = $order->user;
               - my $user_info = $user->user_info;
               - my $gender = $user_info->gender;
-              - my $url = url_for('/api/orders/' . $order->id)->query(status_id => $OpenCloset::Status::STATUS_BOXING);
+              - my $url = url_for('/api/orders/' . $order->id)->query(status_id => $OpenCloset::Monitor::Status::STATUS_BOXING);
               - my $bestfit = $order->bestfit;
               %li.list-group-item.repair.text-left{:class => $gender, :data-order-id => '#{$order->id}'}
                 %i.fa.fa-check.repair-done{:class => "#{$done->{$order->id} ? 'text-success' : '' }"}
